--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backendfarmersmkt",
   "version": "1.0.0",
   "description": "Backend for online farmers market",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
