--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   "homepage": "https://github.com/Greyflanel/BackendFarmersMKT#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.5",
     "knex": "^0.95.6",
     "morgan": "^1.10.0",
     "pg": "^8.6.0"
