--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jwks-rsa": "^2.0.5",
     "knex": "^0.95.6",
     "morgan": "^1.10.0",
+    "node": "^17.1.0",
     "pg": "^8.6.0"
   },
   "devDependencies": {
