--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "knex": "^0.95.6",
     "morgan": "^1.10.0",
     "pg": "^8.6.0",
-    "stripe": "^8.212.0"
+    "stripe": "^8.212.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
